...
class ProfileScreen extends StatelessWidget {
  const ProfileScreen({super.key});

  @override
  Widget build(BuildContext context) => SafeArea(
    child: ListView(
      key: const Key('profile-screen'),
      padding: const EdgeInsets.fromLTRB(20, 22, 20, 24),
      children: [
        Row(
          children: [
            CircleAvatar(
              backgroundColor: SagresColors.yellow.withValues(alpha: .3),
...
